--- a/SharpFile/Thanks.txt
+++ b/SharpFile/Thanks.txt
@@ -22,6 +22,9 @@ http://www.dotnetrix.pwp.blueyonder.co.uk/tabcontrols.html
 Full-featured, plug-in-able Explorer-clone (which I didn't realize was already done when I started) - Stephen Roberts
 http://www.codeproject.com/cs/miscctrl/FileBrowser.asp
 
+DriveDetector which fires when removable drives are added/removed - Jan Dolinay
+http://www.codeproject.com/KB/system/DriveDetector.aspx
+
 Plus, many others made silent contributions along the way including the Commander clones 
 (Total Commander, Norton Commander, Midnight Commander, Servant Salamander) and numerous 
 other articles, tips and tricks.
