--- a/SharpFile/Todo.txt
+++ b/SharpFile/Todo.txt
@@ -13,25 +13,18 @@ BUGS
 	- instead of clearing the drive dropdown and adding newly added drives, just insert/remove the drive being changed
 
 TODO
-- Specifying columns to show in listview
-	- childresource specifies what properties are available
-	- xml settings to specify actual columns to show from the available columns
-- split settings into more logical sections -- dualview settings would have an element just for their information, etc
-- instead of intelligently trying to determine if a remote computer should have a filesystem event set up for it,
-	maybe all network drives should have a manual filesystem watcher (detailed below)
-- wrap all of the filesystemwatchers in my custom filesystemwatcher
-	- queue events so that only one event gets fired for filesystem changes
-	- for systems that don't support filesystem events (i.e. z:\, network drive), 
-		set up a manual refresh every 500 ms or so (configurable)
+- split settings into more logical sections 
+	- dualview settings would have an element just for their information, etc
+- for systems that don't support filesystem events (i.e. z:\, network drive), 
+	set up a timer refresh every 500 ms or so (configurable)
 - Add the timer to the progress disk class with the ability to start/stop it
 - Specify keycodes for actions
 	- name/value as attributes instead of elements
 	- IAction?
-- ability to use keyboard to tab between elements
+- ability to use keyboard to tab between elements more intelligently
 	- panels, tabs, select a drive, etc.
 - special folders in drive drop down
 	- my documents, control panel?, desktop
-- Specify defaults for settings as an attribute on the property
 - Log4net support to log detailed debug logs
 - Refresh button (or key)
 - Drag-and-drop support for links
@@ -40,7 +33,7 @@ TODO
 - Prevent drag-and-drop operation if it is completed in less than some arbitrary time limit (200 ms?)
 - Validate rename before-hand and throw up tooltip or something (beforeedit event)
 - Information/Property slideable "pane" list like vista's file manager
-- tab functionality
+- implement more tab functionality
 	- middle-click to close tabs
 	- mouse wheel
 	- ctrl-tab
