--- a/SharpFile/Todo.txt
+++ b/SharpFile/Todo.txt
@@ -16,6 +16,8 @@ BUGS
 	- instead of clearing the drive dropdown and adding newly added drives, just insert/remove the drive being changed
 
 TODO
+- Investigate the type command-line argument to sgen
+- Investigate legality of disctributing 7-z, sgen, ilmerge
 - configuration for parent directory and root directory
 - configuration for what happens when the drive drop down is clicked
 - configuration for toolbar
