Move some classes to separate directories to organize the code. Preliminary support for compressed files.

--- a/SharpFile/Todo.txt
+++ b/SharpFile/Todo.txt
@@ -16,6 +16,8 @@ BUGS
 	- instead of clearing the drive dropdown and adding newly added drives, just insert/remove the drive being changed
 
 TODO
+- Base class for child resource retrievers
+- Change delegate/events to standard .NET way
 - Specify view to use for each child resource retriever
 - Ability to reload settings made manually and the settings take affect immediately
 - Investigate the type command-line argument to sgen
