--- a/SharpFile/Todo.txt
+++ b/SharpFile/Todo.txt
@@ -16,6 +16,7 @@ BUGS
 	- instead of clearing the drive dropdown and adding newly added drives, just insert/remove the drive being changed
 
 TODO
+- Investigate combining Infrastructure with IO
 - Base class for child resource retrievers
 - Change delegate/events to standard .NET way
 - Specify view to use for each child resource retriever
