--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,6 @@
+- stress test the logging functionality
+- ability to include/exclude paths for overlays
+
 Slow retrieval:
 On the old Dell: 5s to retrieve from z:\; 4s to display the content; explorer: 1s
 LCG should speed up displaying content. Not sure how to speed up retrieving the content.
