--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,9 @@
+- All Windows messaging enums
+http://senapi.blogspot.com/2007/11/all-windows-messages-c-enum.html
+
+- Balloon tip:
+http://www.pocketnerd.net/BoC/200402/ASPX/TextBoxBalloon.aspx
+
 - Different resizing code:
 http://www.hanselman.com/blog/ScalingResizingResamplingAnImageInASPNET.aspx
 
